eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easy-bank-api-deployment
  labels:
    app: easy-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: easy-bank-api
  template:
    metadata:
      labels:
        app: easy-bank-api
    spec:
      containers:
        - name: easy-bank-api
          image: 314772756306.dkr.ecr.eu-central-1.amazonaws.com/easybank:a0ec9534815a5c6487371e37f37b81c10172d093
          imagePullPolicy: Always
          ports:
            - containerPort: 7999
