eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easy-bank-api-service
spec:
  selector:
    app: easy-bank-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7999
  # type: LoadBalance
  type: ClusterIP
